# controllers/container.go
@@ -14,16 +14,16 @@ type ContainerController struct {
 // @Title create container
 // @Description create container
 // @Param	vm_ip		query 	string	true		"宿主机地址"
-// @Param	cont_name		query 	string	true		"容器名称"
-// @Param	cont_image		query 	string	true		"容器的image"
+// @Param	container_name		query 	string	true		"容器名称"
+// @Param	image_name		query 	string	true		"容器的image"
 // @Param	env		query 	string	true		"env参数，多个以逗号分隔"
 // @Success 200 {"status": 200}
 // @Failure 403 body is empty
 // @router /create [get]
 func (c *ContainerController) CreateContainer() {
-	cont_name := c.GetString("cont_name")
+	cont_name := c.GetString("container_name")
 	vm_ip := c.GetString("vm_ip")
-	cont_image := c.GetString("cont_image")
+	cont_image := c.GetString("image_name")
 	env := c.GetString("env")
 	c.Data["json"] = models.Create(vm_ip, cont_name, cont_image, env)
 	c.ServeJSON()
@@ -32,41 +32,53 @@ func (c *ContainerController) CreateContainer() {
 // @Title delete container
 // @Description delete container
 // @Param	vm_ip		query 	string	true		"宿主机地址"
-// @Param	cont_name		query 	string	true		"容器名称"
+// @Param	container_id		query 	string	true		"容器id"
 // @Success 200 {"status": 200}
 // @Failure 403 body is empty
 // @router /del [get]
 func (c *ContainerController) DelContainer() {
-	cont_name := c.GetString("cont_name")
+	container_id := c.GetString("container_id")
 	vm_ip := c.GetString("vm_ip")
-	c.Data["json"] = models.Del(vm_ip, cont_name)
+	c.Data["json"] = models.Del(vm_ip, container_id)
 	c.ServeJSON()
 }
 
 // @Title start container
 // @Description start container
 // @Param	vm_ip		query 	string	true		"宿主机地址"
-// @Param	cont_name		query 	string	true		"容器名称"
+// @Param	container_id		query 	string	true		"容器id"
 // @Success 200 {"status": 200}
 // @Failure 403 body is empty
 // @router /start [get]
 func (c *ContainerController) StartContainer() {
-	cont_name := c.GetString("cont_name")
+	container_id := c.GetString("container_id")
 	vm_ip := c.GetString("vm_ip")
-	c.Data["json"] = models.Start(vm_ip, cont_name)
+	c.Data["json"] = models.Start(vm_ip, container_id)
 	c.ServeJSON()
 }
 
 // @Title stop container
 // @Description stop container
 // @Param	vm_ip		query 	string	true		"宿主机地址"
-// @Param	cont_name		query 	string	true		"容器名称"
+// @Param	container_id		query 	string	true		"容器id"
 // @Success 200 {"status": 200}
 // @Failure 403 body is empty
 // @router /stop [get]
 func (c *ContainerController) StopContainer() {
-	cont_name := c.GetString("cont_name")
+	container_id := c.GetString("container_id")
 	vm_ip := c.GetString("vm_ip")
-	c.Data["json"] = models.Stop(vm_ip, cont_name)
+	c.Data["json"] = models.Stop(vm_ip, container_id)
+	c.ServeJSON()
+}
+
+// @Title get all container
+// @Description get all container
+// @Param	vm_ip		query 	string	true		"宿主机地址"
+// @Success 200 {"status": 200}
+// @Failure 403 body is empty
+// @router /getall [get]
+func (c *ContainerController) GetAllContainer() {
+	vm_ip := c.GetString("vm_ip")
+	c.Data["json"] = models.GetAll(vm_ip)
 	c.ServeJSON()
 }
